chore: add centralized session management

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "sqlalchemy (>=2.0.43,<3.0.0)",
     "psycopg[binary] (>=3.2.10,<4.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "typer[all] (>=0.19.2,<0.20.0)"
 ]
 
 
