--- a/alembic.ini
+++ b/alembic.ini
@@ -81,10 +81,10 @@ path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# database URL.  This is consumed by the user-maintained env.py script only.
+# database URL. This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg://postgres:salehi82%%40I@localhost:5432/todolist_db
+## sqlalchemy.url = postgresql+psycopg://postgres:salehi82%%40I@localhost:5432/todolist_db
 
 
 [post_write_hooks]
