--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "psycopg[binary] (>=3.2.10,<4.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "typer[all] (>=0.19.2,<0.20.0)"
+    "typer[all] (>=0.19.2,<0.20.0)",
+    "rich (>=14.1.0,<15.0.0)"
 ]
 
 
